# simplekv

./: .bazelproject  .bazelrc  MODULE.bazel  README.md
.github/workflows/: ci.yaml
app/: BUILD.bazel  MainApp.kt
app/allocator/: BuddyAllocator.kt  MemoryAllocator.kt  MemoryBlock.kt
app/config/: Config.kt
app/core/: BUILD.bazel  Body.kt  CommandOpCodes.kt  ErrorCode.kt  Errors.kt  Event.kt  Header.kt  ResponseStatus.kt
app/dashtable/: Bucket.kt  DashTable.kt  Entry.kt  KeyValueStore.kt  Segment.kt  SegmentDirectory.kt  VectorSpeciesUtils.kt
app/datastructure/: KeyValueStore.kt  SwissMap.java
app/handler/: AbstractWorker.kt  AppendPrependHandler.kt  AppendPrependProcessor.kt  BaseHandler.kt  BaseProcessor.kt  CacheEntry.kt  DeleteHandler.kt  DeleteProcessor.kt  GetHandler.kt  GetProcessor.kt  GlobalExceptionHandler.kt  Handler.kt  IncrementDecrementHandler.kt  IncrementDecrementProcessor.kt  MainHandler.kt  MutateHandler.kt  MutateProcessor.kt  NotNullKeyHandler.kt  NotNullKeyProcessor.kt  NullKeyHandler.kt  NullKeyProcessor.kt  Router.kt  Worker.kt
app/server/: AcceptThread.kt  AcceptorThread.kt  BUILD.bazel  Container.kt  Message.kt  SelectorThread.kt  Server.kt  Session.kt  Worker.kt
app/utils/: BUILD.bazel  ByteBufferPoolFactory.kt  ByteBufferPooledFactory.kt  Commands.kt  Responses.kt  Validators.kt
