load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")
load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "data_structure_java_lib",
    srcs = glob(["datastructure/SwissMap.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_jetbrains_annotations",
    ],
)

kt_jvm_binary(
    name = "main_app",
    srcs = [
        "MainApp.kt",
        "allocator/BuddyAllocator.kt",
        "allocator/MemoryAllocator.kt",
        "allocator/MemoryBlock.kt",
        "config/Config.kt",
        "core/Body.kt",
        "core/CommandOpCodes.kt",
        "core/ErrorCode.kt",
        "core/Event.kt",
        "core/Header.kt",
        "datastructure/KeyValueStore.kt",
        "handler/AppendPrependProcessor.kt",
        "handler/BaseProcessor.kt",
        "handler/DeleteProcessor.kt",
        "handler/GetProcessor.kt",
        "handler/Handler.kt",
        "handler/IncrementDecrementProcessor.kt",
        "handler/MainHandler.kt",
        "handler/MutateProcessor.kt",
        "handler/NotNullKeyProcessor.kt",
        "handler/NullKeyProcessor.kt",
        "server/AcceptorThread.kt",
        "server/Container.kt",
        "server/Message.kt",
        "server/SelectorThread.kt",
        "server/Server.kt",
        "server/Worker.kt",
        "utils/Commands.kt",
        "utils/Responses.kt",
        "utils/Validators.kt",
    ],
    jvm_flags = [
        "-Xms1G",
        "-Xmx4G",
        "-XX:+UseZGC",
        "-XX:+ZGenerational",
        "-XX:InitiatingHeapOccupancyPercent=70",
        "-XX:SoftMaxHeapSize=1G",
    ],
    main_class = "app.MainApp",
    deps = [
        "//app:data_structure_java_lib",
        "@maven//:com_google_guava_guava",
        "@maven//:com_lmax_disruptor",
        "@maven//:commons_cli_commons_cli",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_simple",
    ],
)
